--- a/views/settings.html
+++ b/views/settings.html
@@ -34,7 +34,7 @@
             </fieldset>
             <fieldset>
                 <input type="submit" class="submit-button" value="Ergebnisse hochladen">
-                <button><a href="/">Zu den Ergebnissen</a></button>
+                <button><a href="/home">Zu den Ergebnissen</a></button>
             </fieldset>
 
             </form>
